# python-setenv

./: LICENSE  README.md  pyproject.toml
src/setenv/: __init__.py
