[project]
name = "python-setenv"
version = "0.0.1"
description = "Set env (e.g. HF_TOKEN) from colab/kaggle secrets or dotenv .env env files"
readme = "README.md"
authors = [
    { name = "ffreemt", email = "yucongo+fmt@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setenv"]