[project]
name = "python-setenv"
version = "0.0.2"
description = "Set env (e.g. HF_TOKEN) from colab/kaggle secrets or dotenv .env env files"
readme = "README.md"
authors = [
    { name = "ffreemt", email = "yucongo+fmt@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
     "python-dotenv>=1.0.0",
]

# dynamic = ["version"]

# [tool.hatch.version]
# source = "vcs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]  # Ensure all files are included
include = [
    "pyproject.toml",
    "src/setenv",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["setenv"]